--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "@kinde-oss/kinde-auth-nextjs": "^2.0.9",
+    "@mantine/hooks": "^7.3.2",
     "@pinecone-database/pinecone": "^1.1.2",
     "@prisma/client": "^5.6.0",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -25,18 +26,21 @@
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
     "@uploadthing/react": "^6.0.2",
+    "ai": "^2.2.27",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "langchain": "^0.0.200",
     "lucide-react": "^0.292.0",
     "next": "14.0.2",
+    "openai": "^4.20.1",
     "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
     "react-loading-skeleton": "^3.3.1",
+    "react-markdown": "^9.0.1",
     "react-pdf": "^7.5.1",
     "react-resize-detector": "^9.1.0",
     "react-textarea-autosize": "^8.5.3",
